Checar error en newDefectType.vm cuando se inserta un defecto. Al parecer es algo de la implementación del DAO.

--- a/Code/bm-webapp/pom.xml
+++ b/Code/bm-webapp/pom.xml
@@ -26,7 +26,7 @@
     <name>BugManager Web Application</name>
     <url>http://maven.apache.org</url>
     <properties>
-        <netbeans.hint.deploy.server>Tomcat60</netbeans.hint.deploy.server>
+        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
     </properties>
     <dependencies>
         <dependency>
